tests/compile_fail/compound_assign_pointer_mul/source.c
int main(void) {
    int x;
    int *p;
    p = &x;
    p *= 2;
    return 0;
}
